--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,12 @@ tensorflow = "*"
 numpy = "*"
 
 [dev-packages]
+flake8 = "*"
+autopep8 = "*"
 
 [requires]
 python_version = "3.11"
+
+[scripts]
+lint = "flake8 --show-source ."
+format = "autopep8 -ivr ."
